# rustcord

./: ._dist  .gitignore  Cargo.toml  LICENSE  README.md  bun.lockb  global.css  index.html  package.json
lib/: Cargo.toml
lib/src/: discord.rs  main.rs
lib/src/data/: attachment.rs  message.rs  mod.rs
lib/src/data/channel/: available_tag.rs  channel.rs  default_reaction_emoji.rs  icon_emoji.rs  mod.rs
lib/src/data/discord/: app_data.rs  avatar_decoration.rs  custom_status.rs  discord.rs  guild_folder.rs  guild_folder_id.rs  mod.rs  permission_overwrite.rs  settings.rs  user.rs
lib/src/data/guild/: emoji.rs  guild.rs  guild_minimal.rs  incidents_data.rs  mod.rs  role.rs  sticker.rs
lib/src/data/message/: activity_instance.rs  application.rs  attachment.rs  authorizing_integration_owner.rs  component.rs  embed.rs  interaction.rs  interaction_metadata.rs  message.rs  (+10 more)
public/style/: font.css
src/: app.html  app.rs  font.css  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/api/: discord_api.rs  mod.rs
src-tauri/src/gateway/: gateway.rs  gateway_dtos.rs  gateway_messages.rs  mod.rs
src/components/: category_channel.rs  channel.rs  current_user_panel.rs  guild.rs  guilds_sidebar.rs  message.rs  mod.rs  user_sidebar.rs
src/components/screens/: discord.rs  loading.rs  login.rs  mod.rs
src/lib/api/: channels.ts  gateway.ts  guilds.ts  login.ts  settings.ts
src/lib/assets/: logo.pdn  logo_final_all.pdn
src/lib/components/: GuildSidebar.svelte  TitleBar.svelte
src/lib/stores/: stateStore.ts
src/lib/types/: channel.ts  voiceState.ts
src/lib/utils/: colorUtils.ts  discordAssetUtils.ts  iconUtils.ts  permissionUtils.ts  snowflakeUtils.ts
src/routes/: +page.svelte
(+4 files in other folders)
