[package]
name = "rustcord"
version = "0.0.1"
description = "Discord App in Tauri"
authors = ["TimLohrer"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [ "macos-private-api", "protocol-asset", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["json", "multipart"] }

# rustcord lib
rustcord_lib = { path = "../lib" }
lazy_static = "1.5.0"
window-vibrancy = "0.6.0"
dotenv = "0.15.0"
tokio = { version = "1.45.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
